--- a/css/resume.css
+++ b/css/resume.css
@@ -131,15 +131,15 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #BD5D38 !important;
+  background-color: #FF0033 !important;
 }
 
 .text-primary {
-  color: #BD5D38 !important;
+  color: #FF0033 !important;
 }
 
 a {
-  color: #BD5D38;
+  color: #FF0033;
 }
 
 a:hover, a:focus, a:active {
