--- a/css/resume.css
+++ b/css/resume.css
@@ -1,8 +1,15 @@
 body {
+background-color: #646464;
+}
+
+body {
   font-family: 'Open Sans', serif;
   padding-top: 54px;
   color: #868e96;
+
 }
+
+
 
 @media (min-width: 992px) {
   body {
